@@ -52,7 +52,7 @@ Stops the rendering of the EPG event buttons on the UI.
 Disable the EPG thread.  Me TV will stop collecting EPG events.
 .TP
 .B --read-timeout
-How long to wait (in seconds) before timing out while waiting for data from demuxer (default 15)
+How long to wait (in seconds) before timing out while waiting for data from demuxer (default 5)
 .TP
 .B --display=DISPLAY
 X display to use
