@@ -5,6 +5,7 @@
 	* Fixed Exception: Read timeout at me-tv startup (Clear QAM) (LP: #509040)
 	* Fix for uninitialised version_number in ATSC EIS parser (LP: #509515)
 	* Fix for inefficient polling of EPG data (LP: #509091)
+	* Default demuxer timeout set to 5 seconds
 
 2010-01-17  Michael Lamothe <michael.lamothe@gmail.com>
 
